# sonic-moe

./: pyproject.toml
benchmarks/: moe-cute.py  moe-token-rounding.py
sonicmoe/: enums.py  moe.py
sonicmoe/functional/: __init__.py  backward.py  forward.py  grouped_gemm.py  moe_config.py
